--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "src",
   "version": "1.0.0",
-  "description": "Backend cohort",
+  "description": "Backend plutonium cohort",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon src/index.js"
   },
-  "author": "",
+  "author": "alesha sayyad,jitendra yadav,aditya yadav,nikhil kamale",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
@@ -17,7 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.2.3",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.19",
     "validator": "^13.7.0"
   }
 }
